<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:paddingBottom="20dp"
    android:background="@drawable/dialog_round_back_ground">

    <TextView
        android:id="@+id/tv_create_folder_title"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/create_folder"
        android:textColor="@color/textColorPrimary"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/et_create_folder_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/folder_name"
        android:textColorHint="@color/edit_gray"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_create_folder_title" />

    <TextView
        android:id="@+id/tv_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonOk"
        android:background="@drawable/bg_text"
        android:gravity="center"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:textSize="15sp"
        android:padding="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_create_folder_name"/>

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonCancel"
        android:background="@drawable/bg_text"
        android:gravity="center"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:textSize="15sp"
        android:padding="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toStartOf="@id/tv_ok"
        app:layout_constraintTop_toBottomOf="@id/et_create_folder_name"/>

</androidx.constraintlayout.widget.ConstraintLayout>