<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:paddingBottom="20dp"
    android:background="@drawable/dialog_round_back_ground">

    <TextView
        android:id="@+id/tv_folder_name_title"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/folder"
        android:textColor="@color/textColorPrimary"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_folder_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/folder_name"
        android:gravity="start"
        android:textColor="@color/textColorPrimary"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/tv_folder_name_title"
        app:layout_constraintEnd_toEndOf="@id/tv_folder_name_title"
        app:layout_constraintTop_toBottomOf="@id/tv_folder_name_title" />

    <Button
        android:id="@+id/button_start_from_scratch"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_onayla_yesil"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/start_from_scratch"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_folder_name"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>