<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_round_back_ground"
    android:paddingTop="20dp"
    android:paddingBottom="40dp">

    <ImageButton
        android:id="@+id/ib_search_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:background="@color/cvBackground"
        android:padding="5dp"
        android:src="@drawable/baseline_info_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_search_issues_info"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:text="@string/search_issues"
        android:textColor="@color/textColorPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ib_search_hint" />

    <View
        android:id="@+id/view_search_issue_1"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginTop="40dp"
        android:foreground="@drawable/bg_round_mark"
        app:layout_constraintStart_toStartOf="@id/txt_search_issues_info"
        app:layout_constraintTop_toBottomOf="@id/txt_search_issues_info" />

    <TextView
        android:id="@+id/txt_search_issue_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/search_issue_1"
        android:textColor="@color/textColorPrimary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/view_search_issue_1"
        app:layout_constraintEnd_toEndOf="@id/txt_search_issues_info"
        app:layout_constraintStart_toEndOf="@id/view_search_issue_1"
        app:layout_constraintTop_toTopOf="@id/view_search_issue_1" />

    <View
        android:id="@+id/view_search_issue_2"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginTop="40dp"
        android:foreground="@drawable/bg_round_mark"
        app:layout_constraintStart_toStartOf="@id/txt_search_issues_info"
        app:layout_constraintTop_toBottomOf="@id/txt_search_issue_1" />

    <TextView
        android:id="@+id/txt_search_issue_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/search_issue_2"
        android:textColor="@color/textColorPrimary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/view_search_issue_2"
        app:layout_constraintEnd_toEndOf="@id/txt_search_issues_info"
        app:layout_constraintStart_toEndOf="@id/view_search_issue_2"
        app:layout_constraintTop_toTopOf="@id/view_search_issue_2" />

    <View
        android:id="@+id/view_search_issue_3"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginTop="40dp"
        android:foreground="@drawable/bg_round_mark"
        app:layout_constraintStart_toStartOf="@id/txt_search_issues_info"
        app:layout_constraintTop_toBottomOf="@id/txt_search_issue_2" />

    <TextView
        android:id="@+id/txt_search_issue_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/search_issue_3"
        android:textColor="@color/textColorPrimary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/view_search_issue_3"
        app:layout_constraintEnd_toEndOf="@id/txt_search_issues_info"
        app:layout_constraintStart_toEndOf="@id/view_search_issue_3"
        app:layout_constraintTop_toTopOf="@id/view_search_issue_3" />

    <View
        android:id="@+id/view_search_issue_4"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginTop="40dp"
        android:foreground="@drawable/bg_round_mark"
        app:layout_constraintStart_toStartOf="@id/txt_search_issues_info"
        app:layout_constraintTop_toBottomOf="@id/txt_search_issue_3" />

    <TextView
        android:id="@+id/txt_search_issue_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/search_issue_4"
        android:textColor="@color/textColorPrimary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/view_search_issue_4"
        app:layout_constraintEnd_toEndOf="@id/txt_search_issues_info"
        app:layout_constraintStart_toEndOf="@id/view_search_issue_4"
        app:layout_constraintTop_toTopOf="@id/view_search_issue_4" />




</androidx.constraintlayout.widget.ConstraintLayout>