<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:paddingBottom="20dp"
    android:background="@drawable/dialog_round_back_ground">

    <ImageButton
        android:id="@+id/ib_voice_engine_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_info_24"
        android:background="@color/cvBackground"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/tv_voice_engine_info"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/no_voice_engine"
        android:textColor="@color/textColorPrimary"
        android:textSize="16sp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ib_voice_engine_info"/>

    <TextView
        android:id="@+id/tv_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonSettings"
        android:background="@drawable/bg_text"
        android:gravity="center"
        android:textColor="@color/target_mavisi"
        android:textStyle="bold"
        android:textSize="15sp"
        android:padding="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toStartOf="@id/tv_cancel"
        app:layout_constraintTop_toBottomOf="@id/tv_voice_engine_info"
        />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonCancel"
        android:background="@drawable/bg_text"
        android:gravity="center"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:textSize="15sp"
        android:padding="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_voice_engine_info"
        app:layout_constraintBottom_toBottomOf="parent"

        />

</androidx.constraintlayout.widget.ConstraintLayout>