<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:paddingTop="20dp"
    android:paddingBottom="40dp"
    android:background="@drawable/dialog_round_back_ground">

    <ImageButton
        android:id="@+id/ib_search_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_info_24"
        android:background="@color/cvBackground"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/txt_search_info"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/search_hint_text"
        android:textColor="@color/textColorPrimary"
        android:textSize="16sp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ib_search_hint"/>

    <View
        android:id="@+id/view_search_info_example_1"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:foreground="@drawable/bg_round_mark"
        app:layout_constraintStart_toStartOf="@id/txt_search_info"
        app:layout_constraintTop_toBottomOf="@id/txt_search_info"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/txt_search_info_example_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/view_search_info_example_1"
        app:layout_constraintTop_toTopOf="@id/view_search_info_example_1"
        app:layout_constraintBottom_toBottomOf="@id/view_search_info_example_1"
        app:layout_constraintEnd_toEndOf="@id/txt_search_info"
        android:text="@string/search_hint_1"
        android:textColor="@color/textColorPrimary"
        android:textSize="16sp"
        android:layout_marginStart="15dp"/>

    <View
        android:id="@+id/view_search_info_example_2"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:foreground="@drawable/bg_round_mark"
        app:layout_constraintStart_toStartOf="@id/txt_search_info"
        app:layout_constraintTop_toBottomOf="@id/txt_search_info_example_1"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/txt_search_info_example_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/view_search_info_example_2"
        app:layout_constraintTop_toTopOf="@id/view_search_info_example_2"
        app:layout_constraintBottom_toBottomOf="@id/view_search_info_example_2"
        app:layout_constraintEnd_toEndOf="@id/txt_search_info"
        android:text="@string/search_hint_2"
        android:textColor="@color/textColorPrimary"
        android:textSize="16sp"
        android:layout_marginStart="15dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>